common sentences: import from classpath